# simple-compiler-window

./: CMakeLists.txt  README.md  WindowCompositionAttribute.h  about.h  about.ui  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixinput.cpp  matrixinput.h  matrixinput.ui
